# instagram-reels-scraper

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
data/: inputs.sample.txt  sample_output.json
docs/: usage-examples.md
inputs.sample.txt --output data/: output.json
src/: cli.py  main.py
src/config/: settings.example.json  settings.py
src/instagram_reels/: client.py  init.py  models.py  parser.py  rate_limiter.py  validators.py
src/pipelines/: exporters.py  runner.py  storage.py
src/utils/: logging_utils.py  retry.py  time_utils.py
tests/: test_client.py  test_end_to_end.py  test_parser.py
