[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-reels-scraper"
version = "0.1.0"
description = "Collect structured analytics-ready data from Instagram Reels URLs."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=1.10.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]